--- a/averta/x86/Makefile
+++ b/averta/x86/Makefile
@@ -5,6 +5,8 @@ default:
 	cd asm && make
 	$(CC) $(CFLAGS) -c kernel_base.c -o kernel_base.o
 	$(CC) $(CFLAGS) -c kloader_print.c -o kloader_print.o
+	$(CC) $(CFLAGS) -c gdt.c -o gdt.o
+	$(CC) $(CFLAGS) -c paging.c -o paging.o
 
 clean:
 	cd asm && make clean
