--- a/averta/x86/asm/Makefile
+++ b/averta/x86/asm/Makefile
@@ -1,5 +1,7 @@
 default:
 	nasm -f elf -o boilerplate.o boilerplate.s
+	nasm -f elf -o loadgdt.o loadgdt.s
+	nasm -f elf -o paging_s.o paging.s
 
 clean:
 	rm -f *.o
